--- a/layout/footer.ejs
+++ b/layout/footer.ejs
@@ -1,1 +1,19 @@
-<footer class="footer">footer</footer>
+<div class="df jcc aic bg-primary-200 py24">
+        <p class="h4 h5-sm mr24 mr-sm-16">加入會員取得 9 折優惠</p>
+        <button type="button" class="btn dark-btn">馬上註冊</button>
+    </div>
+    <footer class="bg-neutral-100 py64 py-sm-32">
+        <div class="container">
+            <nav class="df jcsb aic d-sm-block mb24">
+                <a href="index.html" class="mb-sm-8"><img src="https://raw.githubusercontent.com/hexschool/2022-web-layout-training/c07852c7f1c21031d6380bb4398e2163f71122c9/2025-week1/logo.svg" alt="logo"></a>
+                <ul class="df d-sm-block px-sm-12">
+                <li class="mr40 mr-sm-0 mb-sm-4"><a href="index.html" class="py12">商品列表</a></li>
+                <li><a href="index2.html" class="py12">品牌故事</a></li>
+                </ul>
+            </nav>
+            <div class="footer-text">
+                <p class="mb4">Copyright ©2025 URBNSTYLE</p>
+                <p>All Rights Reserved.</p>
+            </div>
+        </div>
+    </footer>
