--- a/assets/scss/all.scss
+++ b/assets/scss/all.scss
@@ -1,5 +1,23 @@
-@import './layout/header.scss';
-@import './layout/footer.scss';
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@100..900&display=swap');
+
+// 變數
+@import './helper/variables';
+// 通用樣式
+@import "./helper/utils";
+
+@import './base/reset';
+// 基本樣式
+@import './base/base';
+
+// 按鈕樣式
+@import './components/button';
 
 
-@import './pages/index.scss';
+@import './layout/header';
+@import './layout/footer';
+
+
+@import './pages/index';
+@import './pages/style';
+@import './pages/style2';
+@import './pages/story';
