--- a/layout/header.ejs
+++ b/layout/header.ejs
@@ -1,4 +1,10 @@
-<h1 class="header">header</h1>
-<a href="index.html">index</a>
-<a href="about.html">about</a>
-<a href="contact.html">contact</a>
+ <nav class="container py16 py-sm-12 df aic jcsb">
+        <ul class="df aic">
+            <li class="mr48">
+                <a href="index.html"><img src="https://raw.githubusercontent.com/hexschool/2022-web-layout-training/c07852c7f1c21031d6380bb4398e2163f71122c9/2025-week1/logo.svg" alt="logo"></a>
+            </li>
+            <li class="mr40 d-sm-none"><a href="index.html" class="py12">商品列表</a></li>
+            <li class="d-sm-none"><a href="index2.html" class="py12">品牌故事</a></li>
+        </ul>
+        <a href="#" class="p12"><i class="bi bi-person"></i></a>
+    </nav>
